<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>cn.tuyucheng.taketoday.java.panama</groupId>
   <artifactId>java-panama</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
   <name>java-panama</name>
   <url>https://maven.apache.org</url>

   <dependencies>
      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
         <version>${junit.jupiter.version}</version>
         <scope>test</scope>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven.compiler.version}</version>
            <configuration>
               <source>${maven.compiler.source}</source>
               <target>${maven.compiler.target}</target>
               <compilerArgs>
                  <arg>--add-opens=java.base/java.lang.foreign=ALL-UNNAMED</arg>
                  <arg>--enable-preview</arg>
               </compilerArgs>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-toolchains-plugin</artifactId>
            <version>${maven-toolchains-plugin-version}</version>
            <executions>
               <execution>
                  <goals>
                     <goal>toolchain</goal>
                  </goals>
               </execution>
            </executions>
            <configuration>
               <toolchains>
                  <jdk>
                     <version>${java.version}</version>
                  </jdk>
               </toolchains>
            </configuration>
         </plugin>
      </plugins>
   </build>

   <properties>
      <java.version>19</java.version>
      <toolchains.java.version>19</toolchains.java.version>
      <maven.compiler.source>19</maven.compiler.source>
      <maven.compiler.target>19</maven.compiler.target>
      <maven-toolchains-plugin-version>3.1.0</maven-toolchains-plugin-version>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.version>3.10.1</maven.compiler.version>
      <junit.jupiter.version>5.9.2</junit.jupiter.version>
   </properties>
</project>